--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -57,6 +57,8 @@ dialog :is(button){
 .classroom{
    background-color:whitesmoke;
    border-radius: 10px;
+   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+   padding:10px;
 }
 
 .student:has(+ .student) {
@@ -92,6 +94,7 @@ dialog :is(button){
     font-size:20px;
     color:pink;
     margin-top:10px;
+    margin-bottom: 10px;
 }
 
 .ogrenci-bilgi{
@@ -115,6 +118,7 @@ h3{
     color:pink;
     margin-top:10px;
 }
+
 h3 span{
     color:pink;
 }
