--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -154,6 +154,10 @@ ul{
     color:lightcoral;
 }
 
+.unvisible{
+    display:none;
+}
+
 .students{
     display: flex;
     flex-direction: column;
