--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -1,212 +1,296 @@
-*{
-   font-family: Arial, Helvetica, sans-serif;
-   margin:0;
+* {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
 
-body{
-    background-color: whitesmoke;
+body {
+  background-color: whitesmoke;
 }
 
 dialog::backdrop {
-    background-color: rgba(0,0,0,.5);
+  background-color: rgba(0, 0, 0, 0.5);
 }
-dialog form{
-    display: flex;
-    flex-direction: column;
-    gap:10px;
+dialog form {
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  gap: 20px;
+  padding: 15px;
+
+  & .btn {
+    background-color: lightcoral;
+    width: 100%;
+  }
 }
-dialog :is(input, select, button){
-    border-radius: 10px;
-    padding: 7px;
-    border-color: pink;
-    border-style: solid;
-    color:lightslategray;
+dialog :is(input, select, button) {
+  border-radius: 10px;
+  padding: 12px;
+  border-color: lightgray;
+  border-style: solid;
+  color: #615b6b;
+  width: 100%;
+  &:focus {
+    outline: none;
+  }
 }
-dialog{
-    border-radius: 25px;
-    padding:25px;
-    border-color:bisque;
-    background-color: pink;
-    margin: auto;
-    color:lightslategray;
+dialog {
+  border-radius: 12px;
+  background-color: lightgray;
+  margin: auto;
+  color: lightslategray;
+
+  & .container {
+    padding-block: 30px;
+  }
 }
 
-dialog :is(button){
-    background-color:bisque;
-    color:lightslategray;
+dialog :is(button) {
+  background-color: bisque;
+  color: lightslategray;
 }
 
-.student{
-    gap:100px;
-    background-color:lightcoral;
-    border-radius: 10px;
-    color:bisque;
-    font-size: 20px;
-    padding:12px;
-    margin-top:15px;
+.container {
+  padding-inline: calc(5vh + 20px);
+  padding-top: calc(1vh + 25px);
 }
 
-.studentContainer{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    gap:20px;
-    padding-right: 20px;
-    padding-left: 20px;
-    margin-top:30px;
+.student {
+  gap: 100px;
+  background-color: lightcoral;
+  border-radius: 10px;
+  color: bisque;
+  font-size: 20px;
+  padding: 12px;
+  margin-top: 15px;
 }
 
-.classroom{
-   background-color:whitesmoke;
-   border-radius: 10px;
-   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-   padding:10px;
+.flex {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.studentContainer {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: space-between;
+  gap: 20px;
+
+  margin-top: 30px;
+}
+
+.classroom {
+  background-color: whitesmoke;
+  border-radius: 10px;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  padding-inline: 20px;
+  padding-block: 10px;
 }
 
 .student:has(+ .student) {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
-.student img{
-    border-radius: 10px;
-    width:100px;
+.student img {
+  border-radius: 10px;
+  width: 100px;
 }
 
-.delBtn{
-    background-color:bisque;
-    border-color: lightcoral;
-    font-size: 20px;
-    width: 100px;
-    border-radius: 10px;
-    margin-top:10px;
-    color:lightcoral;
-    font-weight: bold;
-    padding:5px;
-    cursor: pointer;
+.delBtn {
+  background-color: bisque;
+  border-color: lightcoral;
+  font-size: 20px;
+  width: 100px;
+  border-radius: 10px;
+  margin-top: 10px;
+  color: lightcoral;
+  font-weight: bold;
+  padding: 5px;
+  cursor: pointer;
 }
 
-.delBtn:hover{
-    background-color: lightcoral;
-    color:bisque;
-    border-color:bisque;
+.delBtn:hover {
+  background-color: lightcoral;
+  color: bisque;
+  border-color: bisque;
 }
 
-.classroom h1{
-    text-align: center;
-    font-size:20px;
-    color:pink;
-    margin-top:10px;
-    margin-bottom: 10px;
+.classroom h1 {
+  text-align: center;
+  font-size: 20px;
+  color: pink;
+
+  margin-bottom: 10px;
 }
-.classroom h1:hover{
-    font-weight: bold;
-    font-size: 25px;
-    color:lightcoral;
+.classroom h1:hover {
+  font-weight: bold;
+  font-size: 25px;
+  color: lightcoral;
 }
 
-.ogrenci-bilgi{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap:15px;
+.ogrenci-bilgi {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 15px;
 }
 
 .classroom span {
-    color:lightgrey;
-    font-weight: bold;
+  color: lightgrey;
+  font-weight: bold;
 }
 
-
-.ogrenci-konum{
-    display: flex;
-    gap:30px;
-    margin-top:10px;
+.ogrenci-konum {
+  display: flex;
+  gap: 30px;
+  margin-top: 10px;
 }
 
-h1{
-    color:lightcoral;
-    margin-bottom:10px;
+h1 {
+  color: pink;
+  margin-bottom: 10px;
 }
-h3{
-    color:pink;
-    margin-top:10px;
-}
-
-h3 span{
-    color:pink;
+h3 {
+  color: gray;
+  margin-top: 10px;
+  font-size: 15px;
 }
 
-#ogrenciEkle{
-    background-color: lightcoral;
-    color:bisque;
-    font-size: 20px;
-    padding:12px;
-    border-color: white;
-    border-radius: 25px;
-}
-#ogrenciEkle:hover{
-    background-color: bisque;
-    color:lightcoral;
-    cursor: pointer;
+h3 span {
+  color: pink;
 }
 
-ul{
-    list-style: none;
-    color:lightcoral;
+#ogrenciEkle {
+  color: lightcoral;
+  font-weight: bold;
+  margin-top: 10px;
+  font-size: 17px;
+}
+#ogrenciEkle:hover {
+  cursor: pointer;
+  color: pink;
+}
+.btn {
+  width: 150px;
+  padding: 12px 15px;
+  border: none;
+  border-radius: 12px;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-weight: bold;
+  color: white;
+  background-color: pink;
+  transition: all 1000ms;
+  font-size: 15px;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  outline: 2px solid transparent;
+  align-self: flex-end;
 }
 
-.unvisible{
-    display:none;
+.btn:hover {
+  color: white;
+  transform: scale(1);
+  outline: 2px solid lightcoral;
+
+  /* box-shadow: 4px 5px 17px -4px var(--normal-bg); */
 }
 
-.students{
-    display: flex;
-    flex-direction: column;
-    margin-top:25px;
-    margin-bottom:10px;
-    padding-left: 20px;
-    padding-right: 20px;
+.btn::before {
+  content: '';
+  position: absolute;
+  left: -50px;
+  top: 0;
+  width: 0;
+  height: 100%;
+  background-color: lightcoral;
+  transform: skewX(45deg);
+  z-index: -1;
+  transition: width 1000ms;
 }
 
-#ogrenciEkle{
-    width:150px;
-    height: 50px;
+.btn:hover::before {
+  width: 200%;
 }
 
-.option{
-    color:gray;
-    font-weight: bold;
+ul {
+  list-style: none;
+  color: lightcoral;
 }
 
-[name="genders"]{
-    display: none;
+.unvisible {
+  display: none;
+}
+
+.students {
+  display: flex;
+  flex-direction: column;
+  margin-top: 25px;
+  margin-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.option {
+  color: gray;
+  font-weight: bold;
+}
+
+[name='genders'] {
+  display: none;
 }
 .option label {
-    margin-right: 10px;
-    cursor: pointer;
-    padding-left: 20px;
+  margin-right: 10px;
+  cursor: pointer;
+  padding-left: 20px;
 }
-
 
 .toplamOgrenci {
-    margin-bottom:20px;
-    margin-top: 20px;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
-#allStudent{
-    color:lightcoral;
+#allStudent {
+  color: pink;
 }
 
-.burayaYaz{
-    padding-left:20px;
-    margin-top:10px;
+.burayaYaz {
+  padding-left: 20px;
+  margin-top: 10px;
 }
 
-.option label:nth-child(5):has([name='genders']:checked){
-    color:pink;
+.option label:nth-child(5):has([name='genders']:checked) {
+  color: pink;
 }
-.option label:nth-child(3):has([name='genders']:checked ){
-    color:lightseagreen;
+.option label:nth-child(3):has([name='genders']:checked) {
+  color: lightseagreen;
 }
-.option label:nth-child(1):has([name='genders']:checked){
-    color:salmon;
+.option label:nth-child(1):has([name='genders']:checked) {
+  color: salmon;
+}
+
+@media only screen and (max-width: 1024px) {
+  .studentContainer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 30px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .flex {
+    flex-direction: column;
+    align-items: center;
+  }
+  .studentContainer {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 30px;
+  }
 }
